--- a/AngularProject/ECDC/src/app/EditReports/edit-accident/edit-accident.component.html
+++ b/AngularProject/ECDC/src/app/EditReports/edit-accident/edit-accident.component.html
@@ -3,7 +3,7 @@
     <h2 class="mx-auto my-4">
       Edit Incident
     </h2>
-    <!-- {{accident | json}} -->
+   
   </div>
   <div class="row">
     <form [formGroup]="accidentForm" id="print-section" (ngSubmit)="submitData()"
@@ -58,7 +58,7 @@
           </td>
         </tr>
         <tr>
-          <td colspan="2">
+          <td colspan="3">
             <div class="form-group">
               <label class="form-label" for="accidentCausesId">Incident Causes : </label>
               <select name="accidentCausesId" formControlName="accidentCausesId" [(ngModel)]="accident.accidentCausesId"
@@ -68,7 +68,7 @@
               </select>
             </div>
           </td>
-          <td>
+          <!-- <td>
             <div class="form-group  ">
               <label class="form-label">Driller Name : </label>
               <input type="text" formControlName="drillerName" class="form-control"
@@ -79,7 +79,7 @@
                 </small>
               </div>
             </div>
-          </td>
+          </td> -->
         </tr>
 
         <tr>
@@ -133,52 +133,103 @@
         <tr>
           <td>
             <label class="form-label m-0 pb-0">QHSE Employee Code: </label>
-            <input list="QHSEmenace" autocomplete="off" formControlName="qhseEmpCode" [(ngModel)]="accident.qhseEmpCode" name="menace" class="form-control"
-              (input)="selectedMenace($event)">
+            <input list="QHSEmenace" [(ngModel)]="QHSE_Code" autocomplete="off" formControlName="qHSEEmpCode" name="qHSEEmpCode" class="form-control" (input)="selectedMenace($event)">
             <datalist id="QHSEmenace">
-              <option *ngFor="let menace of QHSECodeList">{{menace.empCode}} </option>
+              <option *ngFor="let menace of QHSECodeList">{{menace.code}} </option>
             </datalist>
           </td>
           <td>
             <div class="from-group">
-              <label for="qhsePositionId" class="form-label">QHSE Position :</label>
+              <label for="qHSEPositionName" class="form-label">QHSE Position :</label>
               <input class="form-control" [value]="QHSE_Position" disabled />
-              <input name="qhsePositionId" formControlName="qhsePositionId" id="qhsePositionId" class="form-control"
-                [(ngModel)]="QHSEPositionID" hidden />
+              <input name="qHSEPositionName" formControlName="qHSEPositionName" id="qHSEPositionName" class="form-control"
+                [(ngModel)]="QHSE_Position" hidden />
             </div>
           </td>
           <td>
             <div class="form-group">
-              <label class="form-label" for="qhsePositionNameId">Name :</label>
+              <label class="form-label" for="qHSEEmpName">Name :</label>
               <input class="form-control" [value]="QHSE_Name" disabled />
-              <input name="qhsePositionNameId" formControlName="qhsePositionNameId" id="qhsePositionNameId"
-                class="form-control" [(ngModel)]="QHSE_NameID" hidden />
+              <input name="qHSEEmpName" formControlName="qHSEEmpName" id="qHSEEmpName"
+                class="form-control" [(ngModel)]="QHSE_Name" hidden />
             </div>
           </td>
         </tr>
+
         <tr>
           <td>
             <label class="form-label m-0 pb-0">Tool Pusher Code : </label>
-            <input list="ToolPushermenace" autocomplete="off" formControlName="pusherEmpCode" [(ngModel)]="accident.pusherEmpCode" name="menace" class="form-control"
-              (input)="selectedMenaceTool($event)">
-            <datalist id="ToolPushermenace">
-              <option *ngFor="let menace of ToolPusherCodeList">{{menace.empCode}} </option>
+            <input list="QHSEmenace" [(ngModel)]="Pusher_Code" autocomplete="off" formControlName="pusherCode" name="pusherCode" class="form-control" (input)="selectedMenaceTool($event)">
+            <datalist id="pusherCode">
+              <option *ngFor="let menace of QHSECodeList">{{menace.code}} </option>
             </datalist>
           </td>
           <td>
             <div class="from-group">
-              <label for="toolPusherPositionId" class="form-label">Tool Pusher Code :</label>
+              <label for="pusherPositionName" class="form-label">Tool Pusher Position :</label>
               <input class="form-control" [value]="PusherPosition" disabled />
-              <input name="toolPusherPositionId" formControlName="toolPusherPositionId" id="toolPusherPositionId"
-                class="form-control" [(ngModel)]="PusherPositionID" hidden />
+              <input name="pusherPositionName" formControlName="pusherPositionName" id="pusherPositionName"
+                class="form-control" [(ngModel)]="PusherPosition" hidden />
             </div>
           </td>
           <td>
             <div class="form-group">
-              <label class="form-label" for="toolPusherPositionNameId">Name :</label>
+              <label class="form-label" for="pusherName">Name :</label>
               <input class="form-control" [value]="Pusher_Name" disabled />
-              <input name="toolPusherPositionNameId" formControlName="toolPusherPositionNameId"
-                id="toolPusherPositionNameId" class="form-control" [(ngModel)]="Pusher_NameId" hidden />
+              <input name="pusherName" formControlName="pusherName"
+                id="pusherName" class="form-control" [(ngModel)]="Pusher_Name" hidden />
+            </div>
+          </td>
+        </tr>
+
+        <tr>
+          <td>
+            <label class="form-label m-0 pb-0">Driller Code: </label>
+            <input list="QHSEmenace" [(ngModel)]="Driller_Code" autocomplete="off" formControlName="drillerCode" name="drillerCode" class="form-control" (input)="selectedMenaceDriller($event)">
+            <datalist id="drillerCode">
+              <option *ngFor="let menace of QHSECodeList">{{menace.code}} </option>
+            </datalist>
+          </td>
+          <td>
+            <div class="from-group">
+              <label for="drillerPositionName" class="form-label">Position :</label>
+              <input class="form-control" [value]="DrillerPosition" disabled />
+              <input name="drillerPositionName" formControlName="drillerPositionName" id="drillerPositionName" class="form-control"
+                [(ngModel)]="DrillerPosition" hidden />
+            </div>
+          </td>
+          <td>
+            <div class="form-group">
+              <label class="form-label" for="drillerName">Name :</label>
+              <input class="form-control" [value]="Driller_Name" disabled />
+              <input name="drillerName" formControlName="drillerName" id="drillerName"
+                class="form-control" [(ngModel)]="Driller_Name" hidden />
+            </div>
+          </td>
+        </tr>
+
+        <tr>
+          <td>
+            <label class="form-label m-0 pb-0">The injured person Code: </label>
+            <input list="QHSEmenace" [(ngModel)]="InjuredPerson_Code" autocomplete="off" formControlName="injuredPersonCode" name="injuredPersonCode" class="form-control" (input)="selectedMenaceInjuredPerson($event)">
+            <datalist id="injuredPersonCode">
+              <option *ngFor="let menace of QHSECodeList">{{menace.code}} </option>
+            </datalist>
+          </td>
+          <td>
+            <div class="from-group">
+              <label for="injuredPersonPositionName" class="form-label">Position :</label>
+              <input class="form-control" [value]="InjuredPersonPosition" disabled />
+              <input name="injuredPersonPositionName" formControlName="injuredPersonPositionName" id="injuredPersonPositionName" class="form-control"
+                [(ngModel)]="InjuredPersonPosition" hidden />
+            </div>
+          </td>
+          <td>
+            <div class="form-group">
+              <label class="form-label" for="injuredPersonName">Name :</label>
+              <input class="form-control" [value]="InjuredPerson_Name" disabled />
+              <input name="injuredPersonName" formControlName="injuredPersonName" id="injuredPersonName"
+                class="form-control" [(ngModel)]="InjuredPerson_Name" hidden />
             </div>
           </td>
         </tr>
@@ -251,25 +302,10 @@
             </div>
           </td>
         </tr>
-        <!-- <tr>
-          <td colspan="3">
-            <div class="form-group">
-              <label class="form-label">Pictures : </label>
-              <input type="file" formControlName="imageOfaccident" name="imageOfaccident"
-                [(ngModel)]="accident.pictures" class="form-control" (change)="GetImagePath($event)" />
-              <div *ngIf="imageOfaccident?.invalid && (imageOfaccident?.dirty || imageOfaccident?.touched)">
-                <small class="text-danger" *ngIf="imageOfaccident?.errors?.['required']">
-                  pictures is required
-                </small>
-              </div>
-            </div>
-          </td>
-        </tr> -->
       </table>
 
 
       <input type="submit" class="btn btn-success me-3" value="Submit" />
-      <!-- <input type="submit" class="btn btn-primary me-3" value="Export Data" (click)="Download()" /> -->
       <input routerLink="/PrintAccident" type="submit" class="btn btn-primary" value="Show Data">
 
     </form>
