--- a/AngularProject/ECDC/src/app/Items_In_SubDashboard/sub-dashboard/sub-dashboard.component.html
+++ b/AngularProject/ECDC/src/app/Items_In_SubDashboard/sub-dashboard/sub-dashboard.component.html
@@ -148,7 +148,7 @@
     </div>
     <div class="col-md-6" *ngIf="IsUser||IsAdmin">
       <div class="card p-3 mb-2">
-        <div>
+        <!-- <div>
           <h3 class="heading"> QHSE Names </h3>
           <h5> {{QHSEPositionNamecount}} Record </h5>
           <div class="mt-5">
@@ -158,7 +158,19 @@
               </span>
             </div>
           </div>
+        </div> -->
+        <div>
+          <h3 class="heading"> Subject List</h3>
+          <h5> {{subjectListcount}} Record </h5>
+          <div class="mt-5">
+            <div class="mt-3">
+              <span class="text1">
+                <a routerLink="/Dashboard/SubjectList">Show Data</a>
+              </span>
+            </div>
+          </div>
         </div>
+    
       </div>
     </div>
     <div class="col-md-6" *ngIf="IsUser||IsAdmin">
@@ -221,7 +233,7 @@
         </div>
       </div>
     </div>
-    <div class="col-md-6" *ngIf="IsUser||IsAdmin">
+    <!-- <div class="col-md-6" *ngIf="IsUser||IsAdmin">
       <div class="card p-3 mb-2">
         <div>
           <h3 class="heading"> Tool Pusher Positions </h3>
@@ -250,7 +262,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <div class="col-md-6" *ngIf="IsUser||IsAdmin">
       <div class="card p-3 mb-2">
         <div>
