--- a/AngularProject/ECDC/src/app/EditReports/edit-drill/edit-drill.component.html
+++ b/AngularProject/ECDC/src/app/EditReports/edit-drill/edit-drill.component.html
@@ -479,42 +479,30 @@
 
                 </tr>
 
-                <tr>
-                    <td colspan="3">
-                        <div class="form-group">
-                            <label class="form-label">Photos : </label>
-                            <input type="file" formControlName="images" name="images" class="form-control"
-                                (change)="GetImagePath($event)" multiple #fileInput  [(ngModel)]="SelectFiles"/>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <!-- <td>
-                        <div class="row" style="overflow-x: hidden; ">
-                            <div *ngFor="let imageUrl of drill.images" class="col" style="display: flex;">
-                                <img src="http://localhost:5000/DrillIMG/{{imageUrl}}" alt="Image" width="300px"
-                                    height="250px" >
-                            </div>
-                        </div>
-                    </td> -->
-
-                    <td>
-                        <!-- <div class="row" style="overflow-x: hidden; display: flex;">
-                            <div *ngFor="let imageUrl of drill.images" class="col">
-                                <img src="http://localhost:5000/DrillIMG/{{imageUrl}}" alt="Image" width="300px" height="250px">
-                            </div>
-                        </div> -->
-
-
-                        <div class="row" style="max-width: 100%; overflow: hidden;">
-                            <div class="col-6 my-4 p-4" *ngFor="let imageUrl of drill.images">
-                               
-                                <img src="http://localhost:5000/DrillIMG/{{imageUrl}}" alt="Image" width="250px" height="200px">
-                              </div>
-                              
-                          </div>
-                    </td>
-                </tr>
+                
+          <tr>
+            <td colspan="3">
+              <div class="form-group">
+                <label class="form-label">Photos : </label>
+                <input type="file" formControlName="images" name="images" class="form-control"
+                  (change)="GetImagePath($event)" multiple #fileInput/>
+                <div *ngIf="images?.invalid && (images?.dirty || images?.touched)">
+                  <small class="text-danger" *ngIf="images?.errors?.['required']">
+                    Photos is required
+                  </small>
+                </div>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>
+            <div class="row" style="overflow-x: hidden;">
+                <div *ngFor="let imageUrl of drill.images" class="col md-3">
+                    <img src="http://localhost:5000/DrillIMG/{{imageUrl}}" alt="Image" width="300px" height="250px">
+                </div>
+              </div>
+            </td>
+          </tr>
 
             </table>
 
