--- a/AngularProject/ECDC/src/app/Other_Components/sidebar/sidebar.component.html
+++ b/AngularProject/ECDC/src/app/Other_Components/sidebar/sidebar.component.html
@@ -50,13 +50,22 @@
             <i class="bi bi-circle"></i><span>RMPE Compare Chart</span>
           </a>
         </li>
-        <li *ngIf="IsAdmin">
+        <li *ngIf="IsAdmin ||IsUser ">
           <a routerLink="/PotentialHazardCharts">
             <i class="bi bi-circle"></i><span>Potential Hazard Chart</span>
           </a>
         </li>
-
-
+        <li *ngIf="IsUser">
+          <a routerLink="/DrillChart">
+            <i class="bi bi-circle"></i><span>Drill Chart</span>
+          </a>
+        </li>
+       
+        <li *ngIf="IsAdmin">
+          <a routerLink="/DrillCompareCharts">
+            <i class="bi bi-circle"></i><span>Drill Compare Chart</span>
+          </a>
+        </li>
       </ul>
     </li>
 
