--- a/AngularProject/ECDC/src/app/Charts_Of_Reports/QHSEDailyCharts/admin-chart-qhsedaily-by-month/admin-chart-qhsedaily-by-month.component.html
+++ b/AngularProject/ECDC/src/app/Charts_Of_Reports/QHSEDailyCharts/admin-chart-qhsedaily-by-month/admin-chart-qhsedaily-by-month.component.html
@@ -76,12 +76,12 @@
               <tbody>
           
                 <tr class="table-light">
-                  <td rowspan="10" style="text-align: center; vertical-align: middle;">{{this.month1_Name}}</td>
+                  <td rowspan="11" style="text-align: center; vertical-align: middle;">{{this.month1_Name}}</td>
                   <td>Rig-1</td>
                   <td>{{QHSEDailyRecord.totalManPowerHoursListMonth1[0]}}</td>
                   <td>{{QHSEDailyRecord.ptsmRecordsListMonth1[0]}}</td>
                   <td>{{QHSEDailyRecord.drillsRecordsListMonth1[0]}}</td>
-                  <td rowspan="10" style="text-align: center; vertical-align: middle;">{{QHSEDailyRecord.stopCardsRecordsListMonth1[0]}}</td>
+                  <td rowspan="11" style="text-align: center; vertical-align: middle;">{{QHSEDailyRecord.stopCardsRecordsListMonth1[0]}}</td>
                   <td>{{QHSEDailyRecord.totalPTWListMonth1[0]}}</td>
                   <td>{{QHSEDailyRecord.leadershipVisitsListMonth1[0]}}</td>
                   <td>{{QHSEDailyRecord.quizCrewNumberListMonth1[0]}}</td>
@@ -169,7 +169,7 @@
                   <td>{{QHSEDailyRecord.safetyInductionListMonth1[5]}}</td>
                 </tr>
                 <tr class="table-light">
-                  <td>Rig-9</td>
+                  <td>Rig-7</td>
                   <td>{{QHSEDailyRecord.totalManPowerHoursListMonth1[6]}}</td>
                   <td>{{QHSEDailyRecord.ptsmRecordsListMonth1[6]}}</td>
                   <td>{{QHSEDailyRecord.drillsRecordsListMonth1[6]}}</td>
@@ -184,7 +184,7 @@
                   <td>{{QHSEDailyRecord.safetyInductionListMonth1[6]}}</td>
                 </tr>
                 <tr class="table-light">
-                  <td>Rig-10</td>
+                  <td>Rig-9</td>
                   <td>{{QHSEDailyRecord.totalManPowerHoursListMonth1[7]}}</td>
                   <td>{{QHSEDailyRecord.ptsmRecordsListMonth1[7]}}</td>
                   <td>{{QHSEDailyRecord.drillsRecordsListMonth1[7]}}</td>
@@ -199,7 +199,7 @@
                   <td>{{QHSEDailyRecord.safetyInductionListMonth1[7]}}</td>
                 </tr>
                 <tr class="table-light">
-                  <td>Rig-810</td>
+                  <td>Rig-10</td>
                   <td>{{QHSEDailyRecord.totalManPowerHoursListMonth1[8]}}</td>
                   <td>{{QHSEDailyRecord.ptsmRecordsListMonth1[8]}}</td>
                   <td>{{QHSEDailyRecord.drillsRecordsListMonth1[8]}}</td>
@@ -214,7 +214,7 @@
                   <td>{{QHSEDailyRecord.safetyInductionListMonth1[8]}}</td>
                 </tr>
                 <tr class="table-light">
-                  <td>Rig-815</td>
+                  <td>Rig-810</td>
                   <td>{{QHSEDailyRecord.totalManPowerHoursListMonth1[9]}}</td>
                   <td>{{QHSEDailyRecord.ptsmRecordsListMonth1[9]}}</td>
                   <td>{{QHSEDailyRecord.drillsRecordsListMonth1[9]}}</td>
@@ -228,14 +228,29 @@
                   <td>{{QHSEDailyRecord.nonRecordableAccidentListMonth1[9]}}</td>
                   <td>{{QHSEDailyRecord.safetyInductionListMonth1[9]}}</td>
                 </tr>
+                <tr class="table-light">
+                  <td>Rig-815</td>
+                  <td>{{QHSEDailyRecord.totalManPowerHoursListMonth1[10]}}</td>
+                  <td>{{QHSEDailyRecord.ptsmRecordsListMonth1[10]}}</td>
+                  <td>{{QHSEDailyRecord.drillsRecordsListMonth1[10]}}</td>
+                  <td>{{QHSEDailyRecord.totalPTWListMonth1[10]}}</td>
+                  <td>{{QHSEDailyRecord.leadershipVisitsListMonth1[10]}}</td>
+                  <td>{{QHSEDailyRecord.quizCrewNumberListMonth1[10]}}</td>
+                  <td>{{QHSEDailyRecord.monthlyInspectionListMonth1[10]}}</td>
+                  <td>{{QHSEDailyRecord.weeklyInspectionListMonth1[10]}}</td>
+                  <td>{{QHSEDailyRecord.daysSinceLastLTIListMonth1[10]}}</td>
+                  <td>{{QHSEDailyRecord.recordableAccidentListMonth1[10]}}</td>
+                  <td>{{QHSEDailyRecord.nonRecordableAccidentListMonth1[10]}}</td>
+                  <td>{{QHSEDailyRecord.safetyInductionListMonth1[10]}}</td>
+                </tr>
                 
                 <tr class="table-light">
-                  <td rowspan="10" style="text-align: center; vertical-align: middle;">{{this.month2_Name}}</td>
+                  <td rowspan="11" style="text-align: center; vertical-align: middle;">{{this.month2_Name}}</td>
                     <td>Rig-1</td>
                     <td>{{QHSEDailyRecord.totalManPowerHoursListMonth2[0]}}</td>
                     <td>{{QHSEDailyRecord.ptsmRecordsListMonth2[0]}}</td>
                     <td>{{QHSEDailyRecord.drillsRecordsListMonth2[0]}}</td>
-                    <td rowspan="10" style="text-align: center; vertical-align: middle;">{{QHSEDailyRecord.stopCardsRecordsListMonth2[0]}}</td>
+                    <td rowspan="11" style="text-align: center; vertical-align: middle;">{{QHSEDailyRecord.stopCardsRecordsListMonth2[0]}}</td>
                     <td>{{QHSEDailyRecord.totalPTWListMonth2[0]}}</td>
                     <td>{{QHSEDailyRecord.leadershipVisitsListMonth2[0]}}</td>
                     <td>{{QHSEDailyRecord.quizCrewNumberListMonth2[0]}}</td>
@@ -323,7 +338,7 @@
                     <td>{{QHSEDailyRecord.safetyInductionListMonth2[5]}}</td>
                   </tr>
                   <tr class="table-light">
-                    <td>Rig-9</td>
+                    <td>Rig-7</td>
                     <td>{{QHSEDailyRecord.totalManPowerHoursListMonth2[6]}}</td>
                     <td>{{QHSEDailyRecord.ptsmRecordsListMonth2[6]}}</td>
                     <td>{{QHSEDailyRecord.drillsRecordsListMonth2[6]}}</td>
@@ -338,7 +353,7 @@
                     <td>{{QHSEDailyRecord.safetyInductionListMonth2[6]}}</td>
                   </tr>
                   <tr class="table-light">
-                    <td>Rig-10</td>
+                    <td>Rig-9</td>
                     <td>{{QHSEDailyRecord.totalManPowerHoursListMonth2[7]}}</td>
                     <td>{{QHSEDailyRecord.ptsmRecordsListMonth2[7]}}</td>
                     <td>{{QHSEDailyRecord.drillsRecordsListMonth2[7]}}</td>
@@ -353,7 +368,7 @@
                     <td>{{QHSEDailyRecord.safetyInductionListMonth2[7]}}</td>
                   </tr>
                   <tr class="table-light">
-                    <td>Rig-810</td>
+                    <td>Rig-10</td>
                     <td>{{QHSEDailyRecord.totalManPowerHoursListMonth2[8]}}</td>
                     <td>{{QHSEDailyRecord.ptsmRecordsListMonth2[8]}}</td>
                     <td>{{QHSEDailyRecord.drillsRecordsListMonth2[8]}}</td>
@@ -368,7 +383,7 @@
                     <td>{{QHSEDailyRecord.safetyInductionListMonth2[8]}}</td>
                   </tr>
                   <tr class="table-light">
-                    <td>Rig-815</td>
+                    <td>Rig-810</td>
                     <td>{{QHSEDailyRecord.totalManPowerHoursListMonth2[9]}}</td>
                     <td>{{QHSEDailyRecord.ptsmRecordsListMonth2[9]}}</td>
                     <td>{{QHSEDailyRecord.drillsRecordsListMonth2[9]}}</td>
@@ -381,6 +396,21 @@
                     <td>{{QHSEDailyRecord.recordableAccidentListMonth2[9]}}</td>
                     <td>{{QHSEDailyRecord.nonRecordableAccidentListMonth2[9]}}</td>
                     <td>{{QHSEDailyRecord.safetyInductionListMonth2[9]}}</td>
+                  </tr>
+                  <tr class="table-light">
+                    <td>Rig-815</td>
+                    <td>{{QHSEDailyRecord.totalManPowerHoursListMonth2[10]}}</td>
+                    <td>{{QHSEDailyRecord.ptsmRecordsListMonth2[10]}}</td>
+                    <td>{{QHSEDailyRecord.drillsRecordsListMonth2[10]}}</td>
+                    <td>{{QHSEDailyRecord.totalPTWListMonth2[10]}}</td>
+                    <td>{{QHSEDailyRecord.leadershipVisitsListMonth2[10]}}</td>
+                    <td>{{QHSEDailyRecord.quizCrewNumberListMonth2[10]}}</td>
+                    <td>{{QHSEDailyRecord.monthlyInspectionListMonth2[10]}}</td>
+                    <td>{{QHSEDailyRecord.weeklyInspectionListMonth2[10]}}</td>
+                    <td>{{QHSEDailyRecord.daysSinceLastLTIListMonth2[10]}}</td>
+                    <td>{{QHSEDailyRecord.recordableAccidentListMonth2[10]}}</td>
+                    <td>{{QHSEDailyRecord.nonRecordableAccidentListMonth2[10]}}</td>
+                    <td>{{QHSEDailyRecord.safetyInductionListMonth2[10]}}</td>
                   </tr>
           
               </tbody>
