--- a/AngularProject/ECDC/src/app/Charts_Of_Reports/QHSEDailyCharts/admin-chart-qhsedaily-by-year/admin-chart-qhsedaily-by-year.component.html
+++ b/AngularProject/ECDC/src/app/Charts_Of_Reports/QHSEDailyCharts/admin-chart-qhsedaily-by-year/admin-chart-qhsedaily-by-year.component.html
@@ -128,7 +128,7 @@
                 <td>{{QHSEDailyRecord.safetyInductionList[5]}}</td>
               </tr>
               <tr class="table-light">
-                <td>Rig-9</td>
+                <td>Rig-7</td>
                 <td>{{QHSEDailyRecord.totalManPowerHoursList[6]}}</td>
                 <td>{{QHSEDailyRecord.ptsmRecordsList[6]}}</td>
                 <td>{{QHSEDailyRecord.drillsRecordsList[6]}}</td>
@@ -143,7 +143,7 @@
                 <td>{{QHSEDailyRecord.safetyInductionList[6]}}</td>
               </tr>
               <tr class="table-light">
-                <td>Rig-10</td>
+                <td>Rig-9</td>
                 <td>{{QHSEDailyRecord.totalManPowerHoursList[7]}}</td>
                 <td>{{QHSEDailyRecord.ptsmRecordsList[7]}}</td>
                 <td>{{QHSEDailyRecord.drillsRecordsList[7]}}</td>
@@ -158,7 +158,7 @@
                 <td>{{QHSEDailyRecord.safetyInductionList[7]}}</td>
               </tr>
               <tr class="table-light">
-                <td>Rig-810</td>
+                <td>Rig-10</td>
                 <td>{{QHSEDailyRecord.totalManPowerHoursList[8]}}</td>
                 <td>{{QHSEDailyRecord.ptsmRecordsList[8]}}</td>
                 <td>{{QHSEDailyRecord.drillsRecordsList[8]}}</td>
@@ -173,7 +173,7 @@
                 <td>{{QHSEDailyRecord.safetyInductionList[8]}}</td>
               </tr>
               <tr class="table-light">
-                <td>Rig-815</td>
+                <td>Rig-810</td>
                 <td>{{QHSEDailyRecord.totalManPowerHoursList[9]}}</td>
                 <td>{{QHSEDailyRecord.ptsmRecordsList[9]}}</td>
                 <td>{{QHSEDailyRecord.drillsRecordsList[9]}}</td>
@@ -186,6 +186,21 @@
                 <td>{{QHSEDailyRecord.recordableAccidentList[9]}}</td>
                 <td>{{QHSEDailyRecord.nonRecordableAccidentList[9]}}</td>
                 <td>{{QHSEDailyRecord.safetyInductionList[9]}}</td>
+              </tr>
+              <tr class="table-light">
+                <td>Rig-815</td>
+                <td>{{QHSEDailyRecord.totalManPowerHoursList[10]}}</td>
+                <td>{{QHSEDailyRecord.ptsmRecordsList[10]}}</td>
+                <td>{{QHSEDailyRecord.drillsRecordsList[10]}}</td>
+                <td>{{QHSEDailyRecord.totalPTWList[10]}}</td>
+                <td>{{QHSEDailyRecord.leadershipVisitsList[10]}}</td>
+                <td>{{QHSEDailyRecord.quizCrewNumberList[10]}}</td>
+                <td>{{QHSEDailyRecord.monthlyInspectionList[10]}}</td>
+                <td>{{QHSEDailyRecord.weeklyInspectionList[10]}}</td>
+                <td>{{QHSEDailyRecord.daysSinceLastLTIList[10]}}</td>
+                <td>{{QHSEDailyRecord.recordableAccidentList[10]}}</td>
+                <td>{{QHSEDailyRecord.nonRecordableAccidentList[10]}}</td>
+                <td>{{QHSEDailyRecord.safetyInductionList[10]}}</td>
               </tr>
         
         
