--- a/AngularProject/ECDC/src/app/Charts_Of_Reports/potential-hazard-charts/potential-hazard-charts.component.html
+++ b/AngularProject/ECDC/src/app/Charts_Of_Reports/potential-hazard-charts/potential-hazard-charts.component.html
@@ -1,7 +1,7 @@
 <div class="container" style="margin: 8% 0; min-height: 63vh;">
     <div class="heading_container heading_center d-flex">
       <h2 class="mx-auto my-4">
-        Pothential Hazard Charts
+        Potential Hazard Charts
       </h2>
   
     </div>
