--- a/AngularProject/ECDC/src/app/Other_Components/sidebar/sidebar.component.html
+++ b/AngularProject/ECDC/src/app/Other_Components/sidebar/sidebar.component.html
@@ -50,7 +50,7 @@
             <i class="bi bi-circle"></i><span>RMPE Compare Chart</span>
           </a>
         </li>
-        <li *ngIf="IsAdmin ||IsUser ">
+        <li *ngIf="IsAdmin">
           <a routerLink="/PotentialHazardCharts">
             <i class="bi bi-circle"></i><span>Potential Hazard Chart</span>
           </a>
